[project]
name = "cornac"
version = "2.3.0"
description = "A Comparative Framework for Multimodal Recommender Systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython>=3.0.11",
    "numpy<2.0",
    "powerlaw>=1.5",
    "scipy<=1.13.1",
    "setuptools>=75.6.0",
    "tqdm>=4.67.1",
]
